      repl.breakLink() with just the ids, reducing traffic
    . Automatically load the AnyEvent backend if needed.
    . Implement ->can() for MozRepl objects

0.28 to be released
    + Switch to "multiline" input mode.
    
      This should eliminate the "no result yet from mozrepl"
      warnings and make input/response somewhat better.
    . Fix a buglet in the memleak test

0.27 20110726
    + The module is now tested with
        Firefox 3.0.9
        Firefox 3.5.x
        Firefox 4.0.1
        Firefox 5
        Firefox 6 Beta

    + The Javascript code now catches eval() errors and
      returns a structured exception to Perl. The
      Perl interface does not change.
      This brings ca. 10% speed increase

    + More UTF-8 handling on the Perl side of the connection. All
      received strings are now actively decoded to unicode strings
      before being handed to JSON.pm
      
    + The JS API now uses the native JSON encoder of Firefox
      instead of using a hand-rolled JSON encoder when possible. The
      conditions are:
        a) Native JSON must be available
        b) The transport of Unicode characters must survive from
           Javascript back to Perl. This only works natively with
           a patched version mozrepl, see
             https://github.com/bard/mozrepl/pull/17
      This should be autodetected.

0.26 20110502
    ! Bugfix: Actually process the C<bufsize> parameter again

0.25 20110426
    . Add CLEAR method to tied objects so now list-assignment
      to a hash works:
      
          %$foo = (Just => 'another', Javascript => 'Hacker');
          $foo->{Just} # another
          $foo->{Javascript} # Hacker
          
    . Add the C<bufsize> parameter to ->install_bridge
      for setting the Net::Telnet buffer size
    . Don't list MozRepl::RemoteObject::Methods in carp()
    . More method implementation moved to ::Methods

0.24 20110416
    . Redo connect logic in ->setup, so that we handle cases